--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </header>
 
-    <main>
+    <!-- <main>
       <div class="sec-one">
         <div class="left">
           <h1><span>Retailers</span><br />Directory</h1>
@@ -50,7 +50,7 @@
           <img src="img/hen & man.png" alt="hen & man" />
         </div>
       </div>
-    </main>
+    </main> -->
 
     <script src="script.js"></script>
   </body>
